--- a/src/main/resources/templates/admin/signup.html
+++ b/src/main/resources/templates/admin/signup.html
@@ -6,6 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<!-- 상단바 삽입 -->
+<div th:replace="fragments/admin_header :: navbar"></div>
+
 <div class="container mt-5">
     <h2 class="mb-4">관리자 회원 가입</h2>
 
