--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -70,7 +70,6 @@
     </table>
 
     <div class="mt-3">
-        <a th:href="@{/member/list}" class="btn btn-secondary">목록</a>
         <div sec:authorize="isAuthenticated() and principal.memberId == #vars.member.memberId" style="display: inline-block;">
             <a th:href="@{'/member/edit/' + ${member.memberId}}" class="btn btn-primary">수정</a>
             <form th:if="${member}"
@@ -78,8 +77,11 @@
                 <button type="submit" class="btn btn-danger" onclick="return confirm('정말 탈퇴 처리하시겠습니까?');">탈퇴 처리</button>
             </form>
         </div>
-        <a th:href="@{/membership/register}" class="btn btn-dark"
-           sec:authorize="hasRole('ADMIN')">회원권 등록</a>
+        <div sec:authorize="hasRole('ADMIN')">
+            <a th:href="@{/member/list}" class="btn btn-secondary">목록</a>
+            <a th:href="@{/membership/register}" class="btn btn-dark">회원권 등록</a>
+        </div>
+
     </div>
 
 </div>
