--- a/src/main/resources/templates/membership/edit.html
+++ b/src/main/resources/templates/membership/edit.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+<div th:replace="fragments/member_header :: navbar"></div>
 
 <div class="container mt-5">
     <h2 class="mb-4">회원권 수정</h2>
