--- a/src/main/resources/templates/membership/refund/admin_list.html
+++ b/src/main/resources/templates/membership/refund/admin_list.html
@@ -6,6 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div th:replace="fragments/admin_header :: navbar"></div>
+
 <div class="container mt-5">
     <h2 class="mb-4">환불 요청 목록</h2>
 
