--- a/src/main/resources/templates/membership/suspend/register.html
+++ b/src/main/resources/templates/membership/suspend/register.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div th:replace="fragments/admin_header :: navbar"></div>
 
 <div class="container mt-5">
     <h2 class="mb-4">회원권 정지 등록</h2>
