fix(view): admin_header와 member_header에서 헤더 링크 수정

--- a/src/main/resources/templates/fragments/admin_header.html
+++ b/src/main/resources/templates/fragments/admin_header.html
@@ -6,13 +6,13 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/list}">관리자 목록</a>
+                    <a class="nav-link" th:href="@{/admin/search}">관리자 목록</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin/members}">회원 목록</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/membership/list}">회원권 목록</a>
+                    <a class="nav-link" th:href="@{/admin/membership/list}">회원권 목록</a>
                 </li>
             </ul>
 
